[gd_scene load_steps=2 format=2]

[ext_resource path="res://ProvaHTTP.gd" type="Script" id=1]

[node name="Control" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 349.0
margin_bottom = 181.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
